Review and document DB::MemberMap.

The MemberMap code had quite a few assertions that are better handled by
ignoring invalid requests. The documentation was added and documents
these edge-cases.

One of these assertions prevented drag&drop on the browser category page
in a category that does not yet have any tag groups.

BUG: 477195